--- a/book.tex
+++ b/book.tex
@@ -8363,8 +8363,15 @@ Pong.}\label{fig:magnavox-odyssey}
 \end{figure}
 
 \begin{quote}
-Placeholder caption \textgreater Student Fullname:GEORGIOS LOMVARDAS
-Student Identification Number:P2018013
+Το Space Invader ειναι ενα shoot 'em up στο οποιο ο παίκτης ελένχει εναν
+εκτοξεφτή λάζερ και πρέπει να εξωλοθρέυσει οσα ποιο πολλά κύματα απο
+εχθρούς μπορεί.Δημιουργήθηκε στην Ιαπωνία απο τον Tomohiro Nishikado και
+θεωρείται ενα απο τα ποιο συμαντικά βιντεοπαιχνίδια που
+διμιουργήθηκαν.Μεχρι και σήμερα πολλά απο τα μεταγενέστερα
+βιντεοπαιχνίδια πείραν την εμπνευσή τους απο το Space Invaders ενω ο
+εξωγήνος εχθρός που πολεμάει ο παίκτης εγινε ενα πολυ συμαντικό σύμβολο
+στην κουλτούρα των βιντεοπαιχνιδιών \textgreater Student
+Fullname:GEORGIOS LOMVARDAS Student Identification Number:P2018013
 \end{quote}
 
 Τα βιντεοπαιχνίδια σε κονσόλες και σε μικροϋπολογιστές των δεκαετιών του
